# Styx-compiler

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  objects.inv  original.py  pyproject.toml  styx_code.py
docs/: index.md
examples/compiled/: arena.py  key_reference_simple_example.py  shopping_cart_demo.py  user_item.py  user_item_2.py
examples/original/: arena.py  key_reference_simple_example.py  shopping_cart_demo.py  user_item.py  user_item_2.py
src/styx_compiler/: __init__.py  comprehension_expander.py  config.py  control_flow.py  core.py  data_flow.py  live_variables.py  main.py  metadata_providers.py  processor.py  transformers.py  visitor.py
tests/: __init__.py  test_cfg.py  test_live_variables.py  test_main.py
transpiler/: __init__.py  config.py  core.py  processor.py  transformers.py  visitor.py
